@@ -1,6 +1,6 @@
 /*
  * (C) 2003-2006 Gabest
- * (C) 2006-2012 see Authors.txt
+ * (C) 2006-2013 see Authors.txt
  *
  * This file is part of MPC-HC.
  *
@@ -34,6 +34,10 @@
 #ifndef _MAX    /* avoid collision with common (nonconforming) macros */
 #define _MAX    (std::max)
 #endif
+
+/* Defines for the sanity checks */
+#define RETARDED_RESOLUTION 4000
+#define SUBPIXEL_MULTIPLIER 8
 
 // Statics constants for use by alpha_blend_sse2
 static __m128i low_mask = _mm_set1_epi16(0xFF);
@@ -438,6 +442,15 @@ bool Rasterizer::ScanConvert()
     mWidth  = maxx + 1 - minx;
     mHeight = maxy + 1 - miny;
 
+    // Check that the size isn't completely crazy
+    // FIXME: Reminder that the rendering should be sane'ified one day to not
+    //        take a fuckload of memory with large things.
+    if (mWidth > RETARDED_RESOLUTION * SUBPIXEL_MULTIPLIER ||
+        mHeight > RETARDED_RESOLUTION * SUBPIXEL_MULTIPLIER) {
+        TRACE(_T("Error in Rasterizer::ScanConvert: size (%dx%d) is too big"), mHeight, mWidth);
+        return false;
+    }
+
     mPathOffsetX = minx;
     mPathOffsetY = miny;
 
@@ -446,10 +459,18 @@ bool Rasterizer::ScanConvert()
     mEdgeNext = 1;
     mEdgeHeapSize = 2048;
     mpEdgeBuffer = (Edge*)malloc(sizeof(Edge) * mEdgeHeapSize);
+    if (!mpEdgeBuffer) {
+        TRACE(_T("Error in Rasterizer::ScanConvert: mpEdgeBuffer is NULL"));
+        return false;
+    }
 
     // Initialize scanline list.
 
     mpScanBuffer = DEBUG_NEW unsigned int[mHeight];
+    if (!mpScanBuffer) {
+        TRACE(_T("Error in Rasterizer::ScanConvert: mpScanBuffer is NULL"));
+        return false;
+    }
     memset(mpScanBuffer, 0, mHeight * sizeof(unsigned int));
 
     // Scan convert the outline.  Yuck, Bezier curves....
